<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.team8project.FriendsFragment">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <EditText
        android:id="@+id/tf_new_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:hint="@string/new_friend"
        android:autofillHints="@string/new_friend"
        android:ems="10"
        android:inputType="textPersonName"
         />
      <Button
        android:id="@+id/btn_new_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:text="@string/add_friend" />

    </LinearLayout>
  </android.support.constraint.ConstraintLayout>
  <LinearLayout
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:background="@color/white">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:padding="5dp"
      android:gravity="center"
      android:text="@string/account_name"
      android:textColor="#ffffff" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:padding="5dp"
      android:gravity="center"
      android:text="@string/elo"
      android:textColor="#ffffff" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:padding="5dp"
      android:gravity="center"
      android:text="@string/games_won"
      android:textColor="#ffffff" />

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:padding="5dp"
      android:gravity="center"
      android:text="@string/games_played"
      android:textColor="#ffffff" />
  </LinearLayout>

  <ListView
    android:id = "@+id/listview"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:divider = "@null"/>



</RelativeLayout>