<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SecurityActivity">
  <android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:layout_constraintTop_toTopOf="parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="234dp"
    tools:layout_editor_absoluteY="172dp">
    <TextView
      android:id="@+id/tv_security_title"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:textSize="40sp"
      android:gravity="center"
      android:text="@string/security" />
    <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:gravity="center"
      android:text="@string/security_prompt"
      android:textSize="20sp" />
    <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:gravity="center"
      android:textSize="20sp"
      android:text="@string/security_question" />
    <EditText
      android:id="@+id/tf_security"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:autofillHints="@string/security_answer"
      android:ems="10"
      android:hint="@string/security_answer"
      android:inputType="textPersonName" />
    <Button
      android:id="@+id/btn_confirm_question"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:text="@string/save"
      android:textStyle="bold"
      />
  </LinearLayout>

</android.support.constraint.ConstraintLayout>