<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_friend_profile"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:layout_constraintTop_toTopOf="parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
  <ImageView
    android:id="@+id/friends_profile_picture"
    android:layout_width="114dp"
    android:layout_height="120dp"
    android:contentDescription="@string/profile_picture"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_friend_profile"
    tools:srcCompat="@drawable/ic_baseline_account" />
  <TextView
    android:id="@+id/friends_bio"
    android:layout_width="273dp"
    android:layout_height="123dp"
    android:layout_marginTop="136dp"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="8dp"
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/friends_bio"
    android:inputType="textMultiLine"
    android:lines="4"
    android:maxLength="140"
    android:scrollbars="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/friends_profile_picture"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_friend_profile" />
  <TextView
    android:id="@+id/friends_games_played"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="93dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/games_played"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.517"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/friends_bio" />
  <TextView
    android:id="@+id/friends_games_won"
    android:layout_width="350dp"
    android:layout_height="40dp"
    android:layout_marginTop="1dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:text="@string/games_won"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/friends_games_played" />
  <Button
    android:id="@+id/friends_view_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:layout_marginStart="140dp"
    android:layout_marginEnd="140dp"
    android:layout_marginLeft="140dp"
    android:layout_marginRight="140dp"
    android:text="@string/view_progress"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/friends_games_won" />
  <Button
    android:id="@+id/friends_chat_room"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:layout_marginStart="162dp"
    android:layout_marginEnd="161dp"
    android:layout_marginLeft="162dp"
    android:layout_marginRight="161dp"
    android:text="@string/my_chat_room"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.55"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/friends_view_progress" />
</android.support.constraint.ConstraintLayout>