<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".NewAccountActivity">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/newAccountTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:layout_gravity="center"
      android:padding="5dp"
      android:background="#333"
      android:text="@string/new_account_title"
      android:textColor="#fff" />
    <EditText
      android:id="@+id/registerName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:layout_gravity="center"
      android:padding="16dp"
      android:autofillHints="@string/account_name"
      android:background="@drawable/round_border"
      android:drawablePadding="16dp"
      android:drawableStart="@drawable/ic_baseline_account"
      android:ems="10"
      android:hint="@string/account_name"
      android:inputType="textPersonName" />
    <EditText
      android:id="@+id/registerPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:padding="16dp"
      android:autofillHints="@string/account_password"
      android:background="@drawable/round_border"
      android:drawablePadding="16dp"
      android:drawableStart="@drawable/ic_baseline_lock_24"
      android:ems="10"
      android:hint="@string/account_password"
      android:inputType="textPassword" />
    <Button
      android:id="@+id/registerButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:background="@drawable/round_bg"
      android:text="@string/new_account_register"
      android:textColor="#FFFFFF"
      android:textSize="14sp" />


  </LinearLayout>
</android.support.constraint.ConstraintLayout>