<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_profile"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:layout_constraintTop_toTopOf="parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
  <Button
    android:id="@+id/camera_button"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="323dp"
    android:layout_marginRight="323dp"
    android:text="@string/camera"
    app:layout_constraintBottom_toTopOf="@+id/game_stats"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/profile_picture" />
  <ImageView
    android:id="@+id/profile_picture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="283dp"
    android:layout_marginRight="283dp"
    android:contentDescription="@string/profile_picture"
    app:layout_constraintBottom_toTopOf="@+id/camera_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
    tools:srcCompat="@tools:sample/avatars" />
  <Button
    android:id="@+id/btn_friends"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="404dp"
    android:layout_marginStart="162dp"
    android:layout_marginEnd="162dp"
    android:layout_marginLeft="162dp"
    android:layout_marginRight="162dp"
    android:text="@string/friends"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/camera_button" />
  <EditText
    android:id="@+id/user_bio"
    android:layout_width="284dp"
    android:layout_height="128dp"
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/add_bio"
    android:inputType="textMultiLine"
    android:lines="4"
    android:maxLength="140"
    android:scrollbars="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/profile_picture"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_profile" />
  <EditText
    android:id="@+id/game_stats"
    android:layout_width="412dp"
    android:layout_height="101dp"
    android:ems="10"
    android:gravity="start|top"
    android:inputType="textMultiLine"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/camera_button" />
  <Button
    android:id="@+id/updateBio_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="221dp"
    android:layout_marginLeft="221dp"
    android:text="@string/update_bio"
    app:layout_constraintBottom_toTopOf="@+id/game_stats"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/camera_button"
    app:layout_constraintTop_toBottomOf="@+id/user_bio" />
</android.support.constraint.ConstraintLayout>