<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".WelcomeActivity">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
      android:id="@+id/textViewGreeting"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:layout_gravity="center"
      android:padding="3dp"
      android:background="#333"
      android:text=""
      android:textColor="#fff"
      android:textSize="36sp" />
    <Button
      android:id="@+id/btn_faq"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:layout_marginLeft="100dp"
      android:layout_marginRight="100dp"
      android:text="@string/faq" />
    <Button
      android:id="@+id/btn_settings"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="100dp"
      android:layout_marginRight="100dp"
      android:text="@string/settings" />
    <Button
      android:id="@+id/logout_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="100dp"
      android:layout_marginRight="100dp"
      android:text="@string/logout" />
  </LinearLayout>
</android.support.constraint.ConstraintLayout>